fixed spacing

--- a/style.css
+++ b/style.css
@@ -48,9 +48,9 @@ main {
 
 .box:hover {
     box-shadow: 0 5px 15px rgba(255, 255, 255, .4);
-} 
+}
 
-.box:hover > .title {
+.box:hover>.title {
     box-shadow: 0 5px 15px rgba(255, 255, 255, .4);
 }
 
@@ -62,6 +62,7 @@ main {
 
 code {
     font-size: 14px;
+    user-select: all;
 }
 
 pre {
